Fix overview section's vertical align

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ p {
 
 .overview-section {
     gap: 30px;
+    align-items: center;
 }
 
 
